--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "pm2 start index.js -n short -o logs/pm2.log -e logs/pm2-error.log --no-daemon",
+    "start": "pm2 start index.js -n short -o logs/pm2.log -e logs/pm2-error.log ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
